code review: use toList() shorthand